Steering file for addNoise

--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -69,3 +69,9 @@ add_test(NAME FCCeeLAr_runxtalk
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 set_test_env(FCCeeLAr_runxtalk)
+
+add_test(NAME FCCeeLAr_ecalNoise
+  COMMAND k4run RecCalorimeter/tests/options/runEcalBarrel_addNoise_thetamodulemerged.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCCeeLAr_ecalNoise)
