Add tools for the implmentation of noise for ALLEGRO v3 (#107)
* Add tools for the implmentation of noise for ALLEGRO v3

* Steering file for addNoise

* Conflict: remove ALLEGRO tests

* Temporarily add the test for ALLEGRO addNoise (to be moved to ddsim+k4run)

* Try to get the new test working

---------

Co-authored-by: Zhibo Wu <zhibo@lxplus912.cern.ch>
Co-authored-by: Zhibo Wu <zhibo@lxplus997.cern.ch>

--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -50,3 +50,10 @@ add_test(NAME FCCeeLAr_benchmarkCorrection
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 set_test_env(FCCeeLAr_benchmarkCorrection)
+
+# test for ALLEGRO addNoise, to be moved ddsim+k4run
+add_test(NAME FCCeeLAr_ecalNoise
+         COMMAND k4run RecFCCeeCalorimeter/tests/options/runEcalBarrel_addNoise_thetamodulemerged.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCCeeLAr_ecalNoise)
