DRCalo digitizer: first working version, is tmp

--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -18,6 +18,7 @@ gaudi_add_module(k4RecCalorimeterPlugins
                       k4geo::detectorSegmentations
                       k4geo::detectorCommon
                       RecCaloCommon
+                      sipm::sipm # Digitizer package for FiberDRCaloDigitizer
                       ${FASTJET_LIBRARIES}
                       )
 
