--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -44,6 +44,18 @@ add_test(NAME FCC_createTruthJets
 )
 set_test_env(FCC_createTruthJets)
 
+add_test(NAME FCC_createTruthJets
+  COMMAND k4run RecCalorimeter/tests/options/runTruthJetReco.py
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(FCC_createTruthJets)
+
+add_test(NAME simulateSiPM
+  COMMAND sh RecCalorimeter/tests/scripts/testSiPM.sh
+         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+set_test_env(simulateSiPM)
+
 #install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests/options DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Reconstruction/RecCalorimeter)
 #
 #gaudi_add_test(genJetClustering
