Add LANGUAGES CXX to disable checks for a C compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
 
-project(k4RecCalorimeter)
+project(k4RecCalorimeter LANGUAGES CXX)
 
 include(GNUInstallDirs)
 include(CTest)
