--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 #---------------------------------------------------------------
 find_package(ROOT COMPONENTS RIO Tree REQUIRED)
 find_package(Gaudi REQUIRED)
-find_package(k4FWCore REQUIRED) # implicit: Gaudi
+find_package(k4FWCore 1.3.0 REQUIRED)
 find_package(EDM4HEP REQUIRED) # implicit: Podio
 find_package(DD4hep REQUIRED)
 find_package(k4geo REQUIRED)
