Add methods to get noise as a vector rather than a set.
Add new overloads for INoiseCaloCellsTool::addRandomCellNoise and
filterCellNoise that return a vector of cell/energy pairs rather than a set.

Also some modernization / clean up.

--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -17,6 +17,7 @@ gaudi_add_module(k4RecFCCeeCalorimeterPlugins
                       ROOT::Hist
                       onnxruntime::onnxruntime
                       nlohmann_json::nlohmann_json
+                      RecCaloCommon
                       )
 install(TARGETS k4RecFCCeeCalorimeterPlugins
   EXPORT k4RecCalorimeterTargets
