Adding ICalorimeterTool::cellIDs.
Adding a method to ICalorimeterTool to retrieve a vector of all existing
cell IDs.

Also factor out common code from all ICalorimeterTool implementations
into CalorimeterToolBase.

--- a/RecCaloCommon/CMakeLists.txt
+++ b/RecCaloCommon/CMakeLists.txt
@@ -8,6 +8,9 @@ gaudi_add_library(RecCaloCommon
                   SOURCES ${_sources}
                   LINK Gaudi::GaudiKernel
                        EDM4HEP::edm4hep
+                       k4FWCore::k4FWCore
+                       k4FWCore::k4Interface
+                       DD4hep::DDCore
                        ${FASTJET_LIBRARIES}
 )
 
