--- a/RecFCCeeCalorimeter/CMakeLists.txt
+++ b/RecFCCeeCalorimeter/CMakeLists.txt
@@ -67,4 +67,4 @@ add_test(NAME FCCeeCalo_DigitizationWhiteningFilter
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 set_test_env(FCCeeCalo_DigitizationWhiteningFilter)
-set_tests_properties(ALLEGRO_o1_v03_sim_reco PROPERTIES FIXTURES_REQUIRED ALLEGRO_sim_files)
+set_tests_properties(FCCeeCalo_DigitizationWhiteningFilter PROPERTIES FIXTURES_REQUIRED ALLEGRO_sim_files)
